# hyywaimaoappnew

./: .env.example  .gitignore
backend/: .env.example  .gitignore  alembic.ini  ecosystem.config.cjs  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 000_initial.py  001_add_ended_at_and_cancelled.py  2697a3a6df88_add_user_note_to_leads.py  5a8753094e0c_add_conversations.py  7f2c3d4e5a6b_add_resend_tracking_to_outreach_emails.py  8a1b2c3d4e5f_add_confirmed_at_to_user_settings.py  9b2c3d4e5f6a_add_better_auth_tables.py
backend/app/: config.py  database.py  dependencies.py  main.py  seed.py
backend/app/models/: __init__.py  auth.py  base.py  company_profile.py  conversation.py  lead.py  outreach_email.py  task.py  user.py  user_settings.py
backend/app/routers/: chat.py  conversations.py  emails.py  leads.py  profile.py  settings.py  tasks.py
backend/app/schemas/: chat.py  common.py  conversation.py  email.py  lead.py  profile.py  settings.py  task.py
backend/app/services/: chat_service.py  conversation_service.py  email_blast_pipeline_service.py  email_craft_pipeline_service.py  email_service.py  intent_parser.py  intent_router.py  lead_service.py  pipeline_service.py  profile_pipeline_beta2.py  profile_pipeline_service.py  profile_service.py  settings_service.py  task_manager.py  task_service.py
backend/app/tests/profile_beta2/: test_completeness.py  test_contact_extractor.py  test_content_cleaner.py  test_page_ranking.py
backend/app/utils/: contact.py  db_sequences.py  file_parser.py  prefix_generator.py  scraper.py  sse.py
(+85 files in other folders)
